--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,14 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  
     <div id="root"></div>
     <!--
       This HTML file is a template.
